tdf#168885 oox: save more of empty charts

Otherwise Word will complain.
Affected types: area, bar, bubble, line, stock.

Regression from 3b4c11350a631e27345e87ecfe258d12983cbfbc.

Change-Id: I56d533d9c55bae45240a1b51733ff60f47b1b2e7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192483
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
(cherry picked from commit bc1f96229eaf67321c384593a4e59e33b8e80a8f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192576
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>